Bind CISA negatives to validated V31 catalog runs